examples/test/testpolicy6918.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6918
  namespace: namespace123
spec:
  podSelector:
    matchLabels:
      key49: value17
      key23: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value27
          key48: value48
          key38: value16
      podSelector:
        matchLabels:
          key36: value23
